Restore getDefaultIpAddressSet() order
The order of returned elements is significant, use ImmutableSet to
retain it.

Change-Id: I55e7551b19b2973b68be2486586efd5ea7012716
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>